apps/nextcloud/ressources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: nextcloud.v34l.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 80
  tls:
    - hosts:
      - nextcloud.v34l.com
      secretName: nextcloud-secret
